should fix rotation whitespace on iphone

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,8 +6,7 @@
 
 html {
     font-family: upheaval;
-    overflow-y: scroll; /* has to be scroll, not auto */
-    -webkit-overflow-scrolling: touch;
+    padding: env(safe-area-inset);
 }
 
 h3, h4, h5, h6, p, ul {
